# dell

./: .aws  .azure  .bash  .bash_aliases  .bash_history  .bashrc  .calc_history  .eslintrc.js  .fdignore  .gitconfig  .gitignore  .ignore  .lesshst  .mysql_history  .node_repl_history  .pdbhistory  .psql_history  .python_history  .pythonrc  .sqlite_history  .tmux.conf  .viminfo  .wget-hsts  .yarnrc  .zcompdump  .zsh_history  .zshrc  EOF  Mon_May_29_22:17:20cpu.txt  Mon_May_29_22:19:31cpu.txt  Sat_Jan_13_19:15:01.txt  a  a.py  allApps.txt  allAppsAfter.txt  allout.txt  b  bff  big  bxxx  (+85 more)
.bun/: .bun_repl_history
.config/: duh.txt  init.vim
.docker/: .buildNodeID  .token_seed  config.json  contexts  features.json
.gnupg/: .#lk0x000056389424ed00.DESKTOP-8JMUDRE.1052  pubring.kbx  random_seed
.jupyter/: migrated
.ssh/: known_hosts  known_hosts.old
.w3m/: cookie  history
cfun/: a.out  chunk.c  cplus.cc  mem.c  memc  plus  po  po.s  time.c
cputest/: Mon_Jun__5_14:38:52cpu.txt  Mon_Jun__5_18:48:10cpu.txt  Mon_Nov_20_00:12:37_CST_2023cpu.txt  Sun_Jun__4_14:04:36cpu.txt  Sun_Oct__8_00:06:34cpu.txt  Tue_May_30_01:34:50cpu.txt  Tue_May_30_16:22:29cpu.txt  Tue_May_30_21:03:28cpu.txt  Wed_May_31_00:45:53cpu.txt  Wed_May_31_18:40:14cpu.txt
dockerc/: dock  docker-compose.yml  file.txt
dockerf/: docker-compose.yml  readme.txt
ffmpeg/: README.md
gitapi/: api  data.json  trace.txt
go/: list.go
hist/: history  history-pre  history.2_23
ipython/: Passphrases2.txt  README.TXT
jq/: jq.json  pp
junk/: .bash_history  a  (+50 more)
p2/: commands  p2.py  pd.py  pyproject.toml
(+253 files in other folders)
