[tool.poetry]
name = "p2"
version = "0.1.0"
description = ""
authors = ["Jim wsl laptop Steffes <jimsteffes@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
pip = "^23.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
